crates/gpui-form-macros/tests/ui/fail/invalid_custom_i18n.stderr
error: validation option `i18n` was removed; use `messages = ProviderType` for a Garde semantic-message provider
 --> tests/ui/fail/invalid_custom_i18n.rs:4:43
  |
4 | #[form(validation(adapter = AppValidator, i18n = AppI18nProvider))]
  |                                           ^^^^
